src/objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <fields>
        <fullName>FinServ__TimeHorizon__c</fullName>
        <label>Time Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Medium Term</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TotalCreditLimit__c</fullName>
        <label>Total Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family home</fullName>
                </value>
                <value>
                    <fullName>Town home</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <label>Financial Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Martial_Status__c</fullName>
        <label>Martial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_yearly_tax_deduction_allowed__c</fullName>
        <label>Max yearly tax deduction allowed ($ )?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Profile__c</fullName>
        <label>Risk Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aggressive (9.0%)</fullName>
                </value>
                <value>
                    <fullName>Balanced (5.0%)</fullName>
                </value>
                <value>
                    <fullName>Conservative (4.0%)</fullName>
                </value>
                <value>
                    <fullName>Growth (7.0%)</fullName>
                </value>
                <value>
                    <fullName>Short Term (3.0%)</fullName>
                </value>
                <value>
                    <fullName>Very Aggressive (11.0%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Id</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Status__c</columns>
        <columns>FinServ__FinancialAccountNumber__c</columns>
        <columns>FinServ__Balance__c</columns>
        <columns>FinServ__InsuredAmount__c</columns>
        <columns>FinServ__OpenDate__c</columns>
        <columns>FinServ__PrimaryOwner__c</columns>
        <columns>Scenario_Id__c</columns>
        <columns>Account_Type__c</columns>
        <columns>FinServ__LoanAmount__c</columns>
        <columns>APR__c</columns>
        <columns>FinServ__APY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Financial_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>FinServ__FinancialAccount__c.Scenario_Credit_Cards_Record_Type,FinServ__FinancialAccount__c.Scenario_Loans_Record_Type,FinServ__FinancialAccount__c.Scenario_Savings_Record_Type</value>
        </filters>
        <label>Financial Accounts</label>
    </listViews>
    <listViews>
        <fullName>Scenario_Financial_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinServ__FinancialAccount__c.Scenario_Credit_Cards_Record_Type,FinServ__FinancialAccount__c.Scenario_Loans_Record_Type,FinServ__FinancialAccount__c.Scenario_Savings_Record_Type</value>
        </filters>
        <label>Scenario Financial Accounts</label>
    </listViews>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>Common_Record_Rype</fullName>
        <active>false</active>
        <label>Common Record Rype</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__AutoLoan</fullName>
        <active>true</active>
        <description>Represents a type of loan for financing a purchase of a motor vehicle.</description>
        <label>Auto Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__BankingAccount</fullName>
        <active>true</active>
        <description>Bank accounts such as savings, checking, and credit</description>
        <label>Bank Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__CheckingAccount</fullName>
        <active>true</active>
        <description>Represents a deposit account for withdrawals and deposits</description>
        <label>Checking Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__CreditCard</fullName>
        <active>true</active>
        <description>Represents a type of payment card issued with a line of credit</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <description>General financial accounts</description>
        <label>General Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__HELOC</fullName>
        <active>true</active>
        <description>Represents a line of credit secured by equity in real property.</description>
        <label>HELOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__InsurancePolicy</fullName>
        <active>true</active>
        <description>Insurance policies</description>
        <label>Insurance Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__InvestmentAccount</fullName>
        <active>true</active>
        <description>Investment accounts such as brokerage accounts</description>
        <label>Investment Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__LoanAccount</fullName>
        <active>true</active>
        <description>Represents a type of account for financing a purchase.</description>
        <label>Loan Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Mortgage</fullName>
        <active>true</active>
        <description>Represents a type of loan for financing a purchase of real property.</description>
        <label>Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__SavingsAccount</fullName>
        <active>true</active>
        <description>Represents an interest-bearing deposit account</description>
        <label>Savings Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__TreasuryService</fullName>
        <active>true</active>
        <description>Accounts that provide transaction or investment services for chief financial officers or treasurers.</description>
        <label>Treasury Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Credit_Cards_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Credit Cards Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Loans_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Loans Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Savings_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Savings Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Checking_Account</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;CheckingAccount&apos; &amp;&amp;
 TEXT(FinServ__FinancialAccountType__c) != &apos;Checking&apos;</errorConditionFormula>
        <errorMessage>Checking is the only Valid Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;CreditCard&apos; &amp;&amp;  TEXT(FinServ__FinancialAccountType__c) != &apos;Credit Card&apos;</errorConditionFormula>
        <errorMessage>Only Credit Card Type Allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__ManagedAndHeldAwayCannotBeBothSelected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(FinServ__Managed__c, FinServ__HeldAway__c)</errorConditionFormula>
        <errorMessage>Select either Managed or Held Away for this Financial Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NoJointOwnerForIndividualAccounts</fullName>
        <active>true</active>
        <description>Error message when a joint owner is entered for an individually owned account.</description>
        <errorConditionFormula>AND(ISPICKVAL(FinServ__Ownership__c , &quot;Individual&quot;), NOT(ISBLANK(FinServ__JointOwner__c)))</errorConditionFormula>
        <errorMessage>Individually owned accounts can&apos;t have a joint owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__PrimaryAndJointOwnerCannotBeSame</fullName>
        <active>true</active>
        <description>Check to see if Primary Owner and the Joint Owner are the same person</description>
        <errorConditionFormula>FinServ__PrimaryOwner__c = FinServ__JointOwner__c</errorConditionFormula>
        <errorMessage>The primary and joint owner must be different.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Saving_Account</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName  = &apos;SavingsAccount&apos; &amp;&amp;
TEXT(FinServ__FinancialAccountType__c) != &apos;Savings&apos;</errorConditionFormula>
        <errorMessage>Only Savings is a valid Type</errorMessage>
    </validationRules>
</CustomObject>